[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/NavItem.gd" type="Script" id=1]
[ext_resource path="res://Visuals/Icons/controller.png" type="Texture" id=2]
[ext_resource path="res://Visuals/themes/OpenSans-Regular.tres" type="DynamicFont" id=3]

[node name="NavItem" type="ColorRect"]
margin_right = 120.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
color = Color( 0.509804, 0.305882, 0.913725, 1 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 60, 40 )
scale = Vector2( 0.0761719, 0.0761719 )
texture = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 2

[node name="Selected" type="ColorRect" parent="HBoxContainer"]
margin_left = 110.0
margin_right = 120.0
margin_bottom = 80.0
rect_min_size = Vector2( 10, 0 )

[node name="Label" type="Label" parent="."]
show_behind_parent = true
margin_left = 125.0
margin_right = 270.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 3 )
text = "Text Here"
valign = 1

[connection signal="gui_input" from="." to="." method="_on_NavItem_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_NavItem_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_NavItem_mouse_exited"]
